skeplib/tests/fixtures/sema_project/invalid/exported_import_inferred_global/dep.sk
let seed: Int = 41;
export { seed };
